guestbook/frontend-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: php-redis
        image: asia.gcr.io/nttd-platformtec/gb-frontend:v4
        resources:
          requests:
            cpu: 100m #before
            #cpu: 110m #after
            memory: 100Mi
        ports:
        - containerPort: 80
